# animator-credit-monitor

./: .env.example  .gitignore  CLAUDE-JP.md  CLAUDE.md  README.md  pyproject.toml
devlog/2026/02/: 02.md
docs/: AUTOMATION-JP.md  AUTOMATION.md  MAINTENANCE-JP.md  MAINTENANCE.md
src/animator_credit_monitor/: __init__.py  history.py  main.py  notifier.py  scraper.py
tests/: test_history.py  test_main.py  test_notifier.py  test_scraper.py
tests/fixtures/: bangumi_works.html  bangumi_works_page2.html  sakugawiki_search.html
